TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "128715023351872" [label="Start"];
  "128715023351872" -> "128715023353600";
  "128715023353600" [label="Code"];
  "128715023353600" -> "128715023353744";
  "128715023353744" [label="Function"];
  "128715023353744" -> "128715023353840";
  "128715023353744" -> "128715023353888";
  "128715023353744" -> "128715023353936";
  "128715023353840" [label="main"];
  "128715023353888" [label="Parameters"];
  "128715023353936" [label="Code"];
  "128715023353936" -> "128715023354032";
  "128715023353936" -> "128715023354080";
  "128715023354032" [label="Code"];
  "128715023354032" -> "128715023354128";
  "128715023354128" [label="Declaration"];
  "128715023354128" -> "128715023354224";
  "128715023354128" -> "128715023354272";
  "128715023354224" [label="x"];
  "128715023354272" [label="1"];
  "128715023354080" [label="Code"];
  "128715023354080" -> "128715023354320";
  "128715023354320" [label="Declaration"];
  "128715023354320" -> "128715023354416";
  "128715023354320" -> "128715023354464";
  "128715023354416" [label="x"];
  "128715023354464" [label="2"];
}
